<resources>
    <string name="app_name">ZapRide</string>
    <string name="zapride">ZapRide</string>
    <string name="onBoardingDesc">Sell houses easily with the help of\nListenoryx and to make this line\nbig I am writing more.</string>
    <string name="welcome">Welcome</string>
    <string name="have_a_better_sharing_experience">Have a better sharing experience</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log In</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_verification">Phone verification</string>
    <string name="code_has_been_send_to_70">Code has been send to ***** ***70</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend</string>
    <string name="_09_00">9:00</string>
    <string name="verify">Verify</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_account_is_ready_to_use_you_will_be_nredirected_to_the_home_page_in_a_few_nseconds">Your account is ready to use. You will be\nredirected to the Home Page in a few\nseconds.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="title">Title</string>
    <string name="skip">Skip</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="complain">Complain</string>
    <string name="referral">Referral</string>
    <string name="about_us">About Us</string>
    <string name="help_and_support">Help And Support</string>
    <string name="help_And_support">Help and Support</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_sit_pulvinar_mauris_mauris_eu_nibh_semper_nisl_pretium_laoreet_sed_non_faucibus_ac_lectus_eu_arcu_nulla_sit_congue_facilisis_vestibulum_egestas_nisl_feugiat_pharetra_odio_sit_tortor_morbi_at_orci_ipsum_dapibus_interdum_lorem_felis_est_aliquet_arcu_nullam_pellentesque_et_habitasse_ac_arcu_et_nunc_euismod_rhoncus_facilisis_sollicitudin">Lorem ipsum dolor sit amet consectetur. Sit\npulvinar mauris mauris eu nibh semper nisl pretium laoreet. Sed non faucibus ac lectus eu arcu. Nulla sit congue facilisis vestibulum egestas nisl feugiat pharetra. Odio sit tortor morbi at orci ipsum dapibus interdum. Lorem felis est aliquet arcu nullam pellentesque. Et habitasse ac arcu et nunc euismod rhoncus facilisis sollicitudin.</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_your_account_please_read_how_account_deletion_will_affect_deleting_your_account_removes_personal_information_our_database_tour_email_becomes_permanently_reserved_and_same_email_cannot_be_re_use_to_register_a_new_account">Are you sure you want to delete your account? Please read how account deletion will affect. Deleting your account removes personal information our database. Tour email becomes permanently reserved and same email cannot be re-use to register a new account.</string>
    <string name="delete">Delete</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="change_language">Change Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy_for_ride_share">Privacy Policy for Ride share</string>
    <string name="at_rideshare_accessible_from_rideshare_com_one_of_our_main_priorities_is_the_privacy_of_our_visitors_this_privacy_policy_document_contains_types_of_information_that_is_collected_and_recorded_by_rideshare_and_how_we_use_it_if_you_have_additional_questions_or_require_more_information_about_our_privacy_policy_do_not_hesitate_to_contact_us_this_privacy_policy_applies_only_to_our_online_activities_and_is_valid_for_visitors_to_our_website_with_regards_to_the_information_that_they_shared_and_or_collect_in_rideshare_this_policy_is_not_applicable_to_any_information_collected_offline_or_via_channels_other_than_this_website_our_privacy_policy_was_created_with_the_help_of_the_free_privacy_policy_generator">At Rideshare, accessible from rideshare.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by rideshare and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in rideshare. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="write_your_text">Write your text</string>
    <string name="professional_rideshare_platform_here_we_will_provide_you_only_interesting_content_which_you_will_like_very_much_we_re_dedicated_to_providing_you_the_best_of_rideshare_with_a_focus_on_dependability_and_earning_we_re_working_to_turn_our_passion_for_rideshare_into_a_booming_online_website_we_hope_you_enjoy_our_rideshare_as_much_as_we_enjoy_offering_them_to_you_i_will_keep_posting_more_important_posts_on_my_website_for_all_of_you_please_give_your_support_and_love_professional_rideshare_platform_here_we_will_provide_you_only_interesting_content_which_you_will_like_very_much_we_re_dedicated_to_providing_you_the_best_of_rideshare_with_a_focus_on_dependability_and_earning_we_re_working_to_turn_our_passion_for_rideshare_into_a_booming_online_website_we_hope_you_enjoy_our_rideshare_as_much_as_we_enjoy_offering_them_to_you_i_will_keep_posting_more_important_posts_on_my_website_for_all_of_you_please_give_your_support_and_love">Professional Rideshare Platform. Here we will provide you only interesting content, which you will like very much. We\'re dedicated to providing you the best of Rideshare, with a focus on dependability and Earning. We\'re working to turn our passion for Rideshare into a booming online website. We hope you enjoy our Rideshare as much as we enjoy offering them to you. I will keep posting more important posts on my Website for all of you. Please give your support and love.Professional Rideshare Platform. Here we will provide you only interesting content, which you will like very much. We\'re dedicated to providing you the best of Rideshare, with a focus on dependability and Earning. We\'re working to turn our passion for Rideshare into a booming online website. We hope you enjoy our Rideshare as much as we enjoy offering them to you. I will keep posting more important posts on my Website for all of you. Please give your support and love.</string>
    <string name="gender">Gender</string>
    <string name="vehicle_not_clean">Vehicle not clean</string>
    <string name="write_your_complain_here_minimum_10_n_characters">Write your complain here (minimum 10\n characters)</string>
    <string name="Submit">Submit</string>
    <string name="your_complain_has_been_send_successful">Your complain has been send successful</string>
    <string name="update">Update</string>
    <string name="enable_your_location">Enable your location</string>
    <string name="choose_your_location_to_start_find_the_request_around_you">Choose your location to start find the\nrequest around you</string>
    <string name="use_my_location">Use my location</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="ride_a_c">Ride A/C</string>
    <string name="send_successful">Send successful</string>
    <string name="back_home">Back Home</string>
    <string name="History">History</string>
    <string name="upcoming">Upcoming</string>
    <string name="ride_mini">Ride Mini</string>
    <string name="auto">Auto</string>
    <string name="bike">Bike</string>
    <string name="send_message">Send Message</string>
    <string name="refer_a_friend_and_earn_20">Refer a friend and Earn $20</string>
    <string name="rkmfucd">RkMFucd</string>
    <string name="invite">Invite</string>
    <string name="password">Password</string>
    <string name="confirm_passowrd">Confirm passowrd</string>
    <string name="continue_">Continue</string>
    <string name="welcome_to_zapride">Welcome to ZapRide</string>
    <string name="enter_your_phone_number_or_password_for_login">Enter your phone number or password for login.</string>
    <string name="registration">Registration</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="help">Help</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="full_name">Full name</string>
    <string name="cash">Cash</string>
    <string name="no_results">No results</string>
    <string name="find_ride">Find Ride</string>
    <string name="past">Past</string>
    <string name="Upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
</resources>