<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_editProfile"
        android:title="@string/edit_profile"
        android:icon="@drawable/user_icon" />
    <item
        android:id="@+id/nav_history"
        android:title="@string/history"
        android:icon="@drawable/history_icon" />
    <item
        android:id="@+id/nav_complain"
        android:title="@string/complain"
        android:icon="@drawable/complain_icon" />
    <item
        android:id="@+id/nav_referral"
        android:title="@string/referral"
        android:icon="@drawable/referral_icon" />
    <item
        android:id="@+id/nav_aboutUs"
        android:title="@string/about_us"
        android:icon="@drawable/about_us_icon" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/setting_icon" />
    <item
        android:id="@+id/nav_helpAndSupport"
        android:title="@string/help_and_support"
        android:icon="@drawable/help_and_support_icon" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon" />
</menu>