<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.signIn.SignIn">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:padding="5dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_to_zapride"
        android:textColor="@color/welcomeTextColor"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enter_your_phone_number_or_password_for_login"
        android:textColor="@color/deleteDescColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <com.github.vardemin.materialcountrypicker.PhoneNumberEditText
        android:id="@+id/ETPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/your_mobile_number"
        android:inputType="phone"
        android:padding="13dp"
        android:textColor="@color/welcomeTextColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        app:cp_autoDetectCountry="true"
        app:cp_fastScrollerHandleColor="@color/black"
        app:cp_listItemTextColor="@color/black"
        app:cp_setCountryCodeBorder="false"
        app:cp_showCountryCodeInView="false"
        app:cp_showCountryDialCodeInView="true"
        app:cp_showFastScroll="true"
        app:cp_showFullScreeDialog="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColor="@color/backColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        android:drawableEnd="@drawable/eye_hide_icon"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/ETPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/ETPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/ETPhoneNumber"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/ETPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/ETPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/ETPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/signUpColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toStartOf="@+id/textViewSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>