<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settings.Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:padding="@dimen/xSmallTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/back"
            android:textColor="@color/backColor"
            android:textSize="@dimen/normalTextSize"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/settings"
        android:textColor="@color/welcomeTextColor"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeLanguageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/next_arrow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/change_language"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/privacyPolicyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/next_arrow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/changeLanguageButton"
        app:layout_constraintStart_toStartOf="@+id/changeLanguageButton"
        app:layout_constraintTop_toBottomOf="@+id/changeLanguageButton"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contactUsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/next_arrow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/privacyPolicyButton"
        app:layout_constraintStart_toStartOf="@+id/privacyPolicyButton"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyButton"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/next_arrow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/delete_account"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/contactUsButton"
        app:layout_constraintStart_toStartOf="@+id/contactUsButton"
        app:layout_constraintTop_toBottomOf="@+id/contactUsButton"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>