<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.contactUs.ContactUs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:padding="@dimen/xSmallTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/back"
            android:textColor="@color/backColor"
            android:textSize="@dimen/normalTextSize"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/contact_us"
        android:textColor="@color/welcomeTextColor"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/name"
        android:padding="15dp"
        android:inputType="textCapSentences"
        android:textColor="@color/backColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:padding="15dp"
        android:inputType="textCapSentences"
        android:textColor="@color/backColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <com.github.vardemin.materialcountrypicker.PhoneNumberEditText
        android:id="@+id/ETPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/your_mobile_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/welcomeTextColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        app:cp_autoDetectCountry="true"
        app:cp_fastScrollerHandleColor="@color/black"
        app:cp_listItemTextColor="@color/black"
        app:cp_setCountryCodeBorder="false"
        app:cp_showCountryCodeInView="false"
        app:cp_showCountryDialCodeInView="true"
        app:cp_showFastScroll="true"
        app:cp_showFullScreeDialog="false"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_no_underline_stroke_color_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/write_your_text"
        android:inputType="textCapSentences"
        android:padding="15dp"
        android:textColor="@color/backColor"
        android:textColorHint="@color/onBoardingDesc"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/ETPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/ETPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/ETPhoneNumber"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>